--- a/waves/namespace-backend.yaml
+++ b/waves/namespace-backend.yaml
@@ -5,3 +5,5 @@ metadata:
   name: project-backend
   annotations:
     argocd.argoproj.io/sync-wave: "-2"
+  labels:
+    argocd.argoproj.io/managed-by: openshift-gitops
