--- a/waves/namespace-frontend.yaml
+++ b/waves/namespace-frontend.yaml
@@ -5,3 +5,5 @@ metadata:
   name: project-frontend
   annotations:
     argocd.argoproj.io/sync-wave: "-2"
+  labels:
+    argocd.argoproj.io/managed-by: openshift-gitops
