Adding additional port to service for testing purpose
rh-pre-commit.version: 2.0.3
rh-pre-commit.check-secrets: ENABLED

--- a/simple/service-backend.yaml
+++ b/simple/service-backend.yaml
@@ -13,3 +13,9 @@ spec:
     - name: go-lang
       port: 8080
       targetPort: 8080
+    - name: test
+      port: 9443
+      targetPort: 9443
+    - name: foo
+      port: 8443
+      targetPort: 8443
