Trying to replicate the problem from https://github.com/kubernetes/kubernetes/issues/39188
rh-pre-commit.version: 2.2.0
rh-pre-commit.check-secrets: ENABLED

--- a/simple/service-backend.yaml
+++ b/simple/service-backend.yaml
@@ -12,9 +12,11 @@ spec:
     - name: go-lang
       port: 8080
       targetPort: 8080
-    - name: test
+    - name: test-udp
+      port: 9443
+      protocol: UDP
+      targetPort: 9443
+    - name: test-tcp
+      protocol: TCP
       port: 9443
       targetPort: 9443
-    - name: foo
-      port: 8443
-      targetPort: 8443
